tests/snapshots/snapshots__rust_todo_marker.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: todo-marker
  severity: note
  message: "`TODO` marker"
  primary:
    file: x.rs
    byte_range:
      start: 3
      end: 7
    line_start: 1
    col_start: 4
    line_end: 1
    col_end: 8
  helps:
    - address before merging or convert to a tracked issue
