tests/snapshots/snapshots__typescript_block_comment_fixme.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: todo-marker
  severity: note
  message: "`FIXME` marker"
  primary:
    file: x.ts
    byte_range:
      start: 3
      end: 8
    line_start: 1
    col_start: 4
    line_end: 1
    col_end: 9
  helps:
    - address before merging or convert to a tracked issue
